tests/miniJava/neg/005056_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java else int [] java ) { return 0 ; } }
